fixing z-index issues w/ wheel directive

--- a/src/app/styles/_common.scss
+++ b/src/app/styles/_common.scss
@@ -3,6 +3,7 @@
 }
 
 .panel {
+	z-index: 2;
 	height: 100vh;
 	width: 100%;
 	overflow: hidden;
@@ -112,7 +113,7 @@
 		visibility: visible;
 		@include prefixed(transition, 0.25s all ease-out 0.4s);
 		@include hacks();
-		z-index: 2;
+		z-index: 2 !important;
 	}
 
 	&.fade-out {
@@ -371,6 +372,7 @@ span.logo {
 	max-width: 1200px;
 	margin: 0 auto;
 	position: absolute;
+	z-index: 1;
 	overflow: hidden;
 	top: 100vh;
 	left: 0;
